fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,7 +75,7 @@ a {
 	width: 60px;
 }
 
-.dropdown-menu {
+li {
 	padding: none;
 }
 
